Mon Apr 12 12:33:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/RoundTrip/client.cpp:
          Const change

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.cpp:
          Use regular guards instead of rw guards

Mon Apr 12 12:20:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Benchmark/Multi_Threaded/Client_Task.cpp
        * performance-tests/Benchmark/RoundTrip/client.cpp
        * performance-tests/Benchmark/RoundTripClient/client.cpp
        * performance-tests/Benchmark/RoundTripClient/RoundTripClientEI.idl
          Only use LwCCM methods

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
        * ciao/Servants/Servant_Impl_Base.cpp:
          Fixed compile warnings

Mon Apr 12 11:40:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Disabled some methods for LwCCM

Mon Apr 12 10:00:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test_cdr.pl:
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/run_test.pl:
        * DAnCE/tests/CIAO/EM-Launch-Failures/run_test.pl:
        * DAnCE/tests/CIAO/EM-Redeployment/run_test.pl:

          Changes to allow tests to run in multiplatform setup.

Mon Apr 12 06:56:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_EventConsumerBase.idl:
          Removed ciao specific extensions which are not used anymore

Fri Apr  9 17:56:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.h:
          Resolved compile error.

Fri Apr  9 13:36:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
          Throw CORBA::BAD_PARAM with 0 for string

Fri Apr  9 12:49:53 UTC 2010  Marcel Smit  <msmit@remedy.nl>
